[gd_scene load_steps=5 format=3 uid="uid://combat_test_001"]

[ext_resource type="Script" path="res://scripts/combat/GridManager.gd" id="1"]
[ext_resource type="Script" path="res://scripts/combat/CombatState.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://cell_scene_001" path="res://scenes/combat/GridCell.tscn" id="3"]
[ext_resource type="Script" path="res://scripts/combat/CombatTestController.gd" id="4"]

[node name="CombatTest" type="Node2D"]
script = ExtResource("4")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 320)
zoom = Vector2(1, 1)

[node name="GridManager" type="Node2D" parent="."]
script = ExtResource("1")
cell_scene = ExtResource("3")

[node name="CombatState" type="Node" parent="."]
script = ExtResource("2")

[node name="UI" type="CanvasLayer" parent="."]

[node name="TurnLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 40.0
text = "Player Turn"
theme_override_font_sizes/font_size = 20

[node name="Instructions" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 660.0
offset_right = 600.0
offset_bottom = 710.0
text = "Click unit to select, click tiles to move/attack
WASD/Arrows: Move camera | SPACE: End turn | ESC: Deselect"
